eval/runs/initial_launch_eval_on_spagila/future/16_hasura_contrib
=== INPUT ===
What are the 5 worst rated Tom Cruise movies that I haven't seen?

=== OUTPUT ===

=== QUERY PLAN ===
To provide the 5 worst rated Tom Cruise movies that the user hasn't seen, I would need to retrieve the following data from the database:

1. A list of all Tom Cruise movies (using the `movie` and `movie_cm` tables).
2. The ratings of each Tom Cruise movie (using the `movie_list` table).
3. A list of movies the user has already seen (assuming this information is stored in a separate table or can be inferred from the user's interaction history).

Here is a Python script to retrieve the required data:
```
# Get all Tom Cruise movies
tom_cruise_movies = executor.get_from_database("SELECT m.title, ml.rating FROM public.movie m JOIN public.movie_cm mc ON m.id = mc.film_id JOIN public.movie_list ml ON m.id = ml.fid WHERE mc.id IN (SELECT id FROM public.cm_info WHERE given_name = 'Tom' AND surname = 'Cruise')")

# Get a list of movies the user has already seen (assuming this information is stored in a separate table)
user_seen_movies = executor.get_from_database("SELECT title FROM public.user_seen_movies WHERE user_id = ?")  # Replace ? with the user's ID

# Filter out movies the user has already seen
worst_rated_tom_cruise_movies = [movie for movie in tom_cruise_movies if movie['title'] not in [seen_movie['title'] for seen_movie in user_seen_movies]]

# Sort the movies by rating and get the 5 worst rated ones
worst_rated_tom_cruise_movies.sort(key=lambda x: x['rating'])
worst_rated_tom_cruise_movies = worst_rated_tom_cruise_movies[:5]

# Output the results
for movie in worst_rated_tom_cruise_movies:
    executor.output(f"Title: {movie['title']}, Rating: {movie['rating']}")
```
Note that this script assumes the existence of a `user_seen_movies` table, which may not be present in the provided database schema. Additionally, the script uses a simple sorting approach to get the 5 worst rated movies, which may not be efficient for large datasets.
=== EXECUTION RESULT ===

Traceback (most recent call last):
  File "<string>", line 5, in <module>
  File "/Users/abhg/hasura/ai-engine/pacha/query_planner/query_planner.py", line 47, in get_from_database
    data = self.data_engine.execute_sql(sql)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/abhg/hasura/ai-engine/pacha/data_engine/postgres.py", line 109, in execute_sql
    cursor.execute(f"SELECT json_agg(t) FROM ({sql.strip(";")}) AS t")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: ...T title FROM public.user_seen_movies WHERE user_id = ?) AS t
                                                                 ^


=== RETRY ===

=== QUERY PLAN ===
The error is due to the fact that the `get_from_database` function does not support parameterized queries. The `?` placeholder in the SQL query is not valid.

To fix this, we need to replace the `?` with the actual user ID. However, since we don't have the user ID in the provided database schema, I'll assume it's a fixed value for demonstration purposes. Replace `123` with the actual user ID.

Here's the corrected script:
```
# Get all Tom Cruise movies
tom_cruise_movies = executor.get_from_database("SELECT m.title, ml.rating FROM public.movie m JOIN public.movie_cm mc ON m.id = mc.film_id JOIN public.movie_list ml ON m.id = ml.fid WHERE mc.id IN (SELECT id FROM public.cm_info WHERE given_name = 'Tom' AND surname = 'Cruise')")

# Get a list of movies the user has already seen (assuming this information is stored in a separate table)
user_id = 123  # Replace with the actual user ID
user_seen_movies = executor.get_from_database(f"SELECT title FROM public.user_seen_movies WHERE user_id = {user_id}")

# Filter out movies the user has already seen
worst_rated_tom_cruise_movies = [movie for movie in tom_cruise_movies if movie['title'] not in [seen_movie['title'] for seen_movie in user_seen_movies]]

# Sort the movies by rating and get the 5 worst rated ones
worst_rated_tom_cruise_movies.sort(key=lambda x: x['rating'])
worst_rated_tom_cruise_movies = worst_rated_tom_cruise_movies[:5]

# Output the results
for movie in worst_rated_tom_cruise_movies:
    executor.output(f"Title: {movie['title']}, Rating: {movie['rating']}")
```
Note that this script assumes the existence of a `user_seen_movies` table, which may not be present in the provided database schema. You may need to modify the script to fit your actual database schema.
=== EXECUTION RESULT ===

Traceback (most recent call last):
  File "<string>", line 6, in <module>
  File "/Users/abhg/hasura/ai-engine/pacha/query_planner/query_planner.py", line 47, in get_from_database
    data = self.data_engine.execute_sql(sql)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/abhg/hasura/ai-engine/pacha/data_engine/postgres.py", line 109, in execute_sql
    cursor.execute(f"SELECT json_agg(t) FROM ({sql.strip(";")}) AS t")
psycopg2.errors.UndefinedTable: relation "public.user_seen_movies" does not exist
LINE 1: SELECT json_agg(t) FROM (SELECT title FROM public.user_seen_...
                                                   ^


=== RETRY ===

=== QUERY PLAN ===
The error is due to the fact that the `user_seen_movies` table does not exist in the database. Since we don't have a table to store the user's seen movies, we can't retrieve that information.

To fix this, we need to remove the part of the script that tries to retrieve the user's seen movies. Here's the corrected script:
```
# Get all Tom Cruise movies
tom_cruise_movies = executor.get_from_database("SELECT m.title, ml.rating FROM public.movie m JOIN public.movie_cm mc ON m.id = mc.film_id JOIN public.movie_list ml ON m.id = ml.fid WHERE mc.id IN (SELECT id FROM public.cm_info WHERE given_name = 'Tom' AND surname = 'Cruise')")

# Sort the movies by rating and get the 5 worst rated ones
tom_cruise_movies.sort(key=lambda x: x['rating'])
worst_rated_tom_cruise_movies = tom_cruise_movies[:5]

# Output the results
for movie in worst_rated_tom_cruise_movies:
    executor.output(f"Title: {movie['title']}, Rating: {movie['rating']}")
```
This script will retrieve all Tom Cruise movies, sort them by rating, and output the 5 worst rated ones.
=== EXECUTION RESULT ===
